Sticky menu improvements : Stops at bottom, doesn't do anything if the list isn't too long, width is calculated.

--- a/ifs-web-service/ifs-core/src/main/resources/static/sass/pages/_competition-management.scss
+++ b/ifs-web-service/ifs-core/src/main/resources/static/sass/pages/_competition-management.scss
@@ -36,12 +36,15 @@
 
 .info-area.sticky {
   position: fixed;
-    top: 0;
-    width: 15.5%;
+  top:0;
 }
+.info-area.bottom {
+  position: absolute;
+}
+
 .competition-management .pagination {
     border-top:none;
-    margin-top:0;  
+    margin-top:0;
 }
 
 .competition-management.app-summary #content  {
